      (BR 194259)
    * Deleting files from the filebrowser is now asynchronous.
    * Copy/Move/Organize operations now display detailed progress information.
    * Copy/Move/Organize operations can now be canceled. 
    * Port Copy/Move to Collection actions to the new File Browser.
    * Script-Updater: Only check for updates if 7 days have passed since the 
      last check.

  BUGFIXES:
    * Fixed a bug where there would be no dynamic playlist biases available 
      with a clean startup. (BR 227797)
    * Fixed a crash when pressing dynamic playlist "save" button on first startup. (BR 227073)
    * Fixed a bug when trying to drag files from some app into Amarok.
      (BR 226167)
    * Fixed a bug in podcast parsing that broke all feeds that do not include a
      guid and possible overwrited data from other podcasts. Introduced in 2.3 beta.
      (BR 227515)
    * Correctly show progress description of last remaining job in the statusbar 
      after multiple jobs have been running.
    * Fixed a regression that broke the playlist save button.
    * Respect the podcast episode limit when new episodes are added during update.
      (BR 220768)
    * Fixed crash when right clicking on a header in "saved playlists". (BR 226290)
    * Fixed bug that prevented files from being deleted from the file browser
      when performing a Move operation.
    * Fixed bug in organize collection dialog that used the old %theartist
      token instead of %artist.
    * Install amarokitpc.protocol to be able to play iTunes links in the
      web browser if Amarok is off. Thanks to Philippe Roubach. (BR 206615) 


VERSION 2.3-Beta 1
  FEATURES:
    * Added a configuration dialog for Local Podcasts. Update interval and base
      download directory can now be configured. (BR 221398)
    * Make it possible to go to next/previous track with horizontal mouse
      wheel button on TrayIcon. (BR 225783)
    * New main toolbar with completely redesigned look and new features.