@@ -18,6 +18,7 @@ VERSION 2.3
       last check.
 
   BUGFIXES:
+    * Compilations do not become normal albums when renaming them. (BR 192029)
     * Fixed a bug where there would be no dynamic playlist biases available 
       with a clean startup. (BR 227797)
     * Fixed a crash when pressing dynamic playlist "save" button on first startup. (BR 227073)
